# camp

./: .gitignore  AutonomousMissionPlanner.pro  CMakeLists.txt  LICENSE  README.md  architecture.md  astar.cpp  astar.h  autonomousvehicleproject.cpp  autonomousvehicleproject.h  backgrounddetails.cpp  backgrounddetails.h  backgroundraster.cpp  backgroundraster.h  behaviordetails.cpp  behaviordetails.h  detailsview.cpp  detailsview.h  geographicsitem.cpp  geographicsitem.h  geographicsmissionitem.cpp  geographicsmissionitem.h  georeferenced.cpp  georeferenced.h  group.cpp  group.h  gz4d_geo.h  linestring.cpp  linestring.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  measuringtool.cpp  measuringtool.h  mission_format.md  missioncanvas.cpp  missioncanvas.h  missionitem.cpp  (+43 more)
launch/: camp.launch
src/: CMakeLists.txt  autonomousvehicleproject.cpp  autonomousvehicleproject.h  avoid_area.cpp  avoid_area.h  backgrounddetails.ui  backgroundraster.cpp  backgroundraster.h  behavior.cpp  behavior.h  behaviordetails.cpp  behaviordetails.h  behaviordetails.ui  detailsview.cpp  detailsview.h  geographicsitem.cpp  geographicsitem.h  geographicsmissionitem.cpp  geographicsmissionitem.h  georeferenced.cpp  group.cpp  group.h  gz4d_geo.h  locationposition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measuringtool.cpp  missionitem.cpp  missionitem.h  nav_source.cpp  nav_source.h  orbit.cpp  orbit.h  orbitdetails.cpp  orbitdetails.h  orbitdetails.ui  platform.cpp  platform.h  (+32 more)
src/ais/: ais_contact.cpp  ais_contact.h  ais_manager.cpp  ais_manager.h  ais_manager.ui
src/background/: background_manager.cpp  background_manager.h
src/geoviz/: geoviz_display.cpp  geoviz_display.h  geoviz_display.ui
src/grids/: grid.cpp  grid.h  grid.ui  grid_manager.cpp  grid_manager.h  grid_manager.ui
src/helm_manager/: CMakeLists.txt  helm_manager.cpp  helm_manager.h  helm_manager.ui  helm_manager_config.ui  plugin.xml  rqt_helm_manager.cpp  rqt_helm_manager.h  rqt_helm_manager.ui
src/main/: cached_file_loader.cpp  cached_file_loader.h  camp_main_window.cpp  camp_main_window.h  camp_main_window.ui  main.cpp
src/map/: item_types.h  layer.cpp  layer.h  layer_list.cpp  layer_list.h  map.cpp  map.h  map_item.cpp  map_item.h  map_item_delegate.cpp  map_item_delegate.h  map_item_mime_data.cpp  map_item_mime_data.h  utilities.cpp  utilities.h
src/map_tiles/: cached_tile_loader.cpp  cached_tile_loader.h  map_tiles.cpp  map_tiles.h  map_tiles.ui  osm.cpp  osm.h  tile.cpp  tile.h  tile_address.cpp  tile_address.h  tile_layout.cpp  tile_layout.h
src/map_tree_view/: map_item_delegate.cpp  map_item_delegate.h  map_tree_view.cpp  map_tree_view.h
src/map_view/: map_view.cpp  map_view.h  web_mercator.cpp  web_mercator.h
src/markers/: markers.cpp  markers.h  markers.ui  markers_manager.cpp  markers_manager.h  markers_manager.ui
src/mission_manager/: mission_manager.cpp  mission_manager.h  mission_manager.ui
src/occupancy_grids/: occupancy_grid.cpp  occupancy_grid.h  occupancy_grid.ui  occupancy_grid_manager.cpp  occupancy_grid_manager.h  occupancy_grid_manager.ui
src/platform_manager/: platform.cpp  platform.h  platform.ui  platform_manager.cpp  platform_manager.h  platform_manager.ui
src/radar/: radar_display.cpp  radar_display.h  radar_manager.cpp  radar_manager.h  radar_manager.ui
src/raster/: raster_layer.cpp  raster_layer.h
src/ros/: layer.cpp  layer.h  node.cpp  node.h  node_manager.cpp  node_manager.h  node_thread.cpp  node_thread.h  ros_client.h  ros_common.h  ros_object.cpp  ros_object.h  ros_widget.cpp  ros_widget.h
src/ros/grids/: grid_manager.cpp  grid_manager.h  grid_map.cpp  grid_map.h
src/ros/markers/: marker.cpp  marker.h  marker_namespace.cpp  marker_namespace.h  markers.cpp  markers.h  markers_manager.cpp  markers_manager.h
src/sonar_manager/: sonar_manager.cpp  sonar_manager.h  sonar_manager.ui
src/sound_play/: sound_play_widget.cpp  sound_play_widget.h  sound_play_widget.ui  speech_alerts.cpp  speech_alerts.h
src/test/: test_map_view.cpp  test_map_view.h  test_map_view.ui
src/tools/: layer_manager.cpp  layer_manager.h  map_tool.cpp  map_tool.h  tools_manager.cpp  tools_manager.h
src/vector/: linestring.cpp  linestring.h  point.cpp  point.h  polygon.cpp  polygon.h  vectordataset.cpp  vectordataset.h
src/wmts/: capabilities.cpp  capabilities.h  layer.cpp  layer.h  tile_matrix_set.cpp  tile_matrix_set.h
vector/: linestring.cpp  linestring.h  point.h  polygon.cpp  polygon.h  vectordataset.cpp  vectordataset.h
workspace/: README.md
workspace/13283/: 13283.BSB  13283_2.KAP  13283_3.KAP
