<?xml version="1.0"?>
<package format="2">
  <name>camp</name>
  <version>0.0.0</version>
  <description>The CCOM Autonomous Mission Planner package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

