<?xml version="1.0"?>
<package format="2">
  <name>camp</name>
  <version>0.0.0</version>
  <description>The CCOM Autonomous Mission Planner package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtpositioning5-dev</build_depend>
  <build_depend>libqt5-svg-dev</build_depend>
  <build_depend>libgdal-dev</build_depend>
  <depend>marine_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rqt_gui</depend>

  <export>
    <rqt_gui plugin="${prefix}/src/helm_manager/plugin.xml"/>
  </export>
</package>

